cmake_minimum_required(VERSION 3.13)
project(30_Day_s_Plan)

set(CMAKE_CXX_STANDARD 17)

add_executable(30_Day_s_Plan main.cpp day2_for_each.cpp day2_for_each.h day2_for_each_n.cpp day2_for_each_n.h day2_qsort.cpp day2_qsort.h day2_bsearch.cpp day2_bsearch.h day3_count_and_count_if.cpp day3_count_and_count_if.h day3_mismatch.cpp day3_mismatch.h day4_find_and_find_if_and_find_if_not.cpp day4_find_and_find_if_and_find_if_not.h day4_find_end.cpp day4_find_end.h)